--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -14,5 +14,6 @@
 .content {
   height: 100%;
   box-sizing: border-box;
-  padding: 15px 10px 0 10px;
+  padding: 0;
+  background-color: #f5f5f5;
 }
