--- a/infomation/src/components/Content/index.css
+++ b/infomation/src/components/Content/index.css
@@ -1,18 +1,20 @@
 .body {
   background: #fff;
   /* margin-bottom: 5px; */
+  padding: 5px 0 10px;
+  border-bottom: 1px solid rgba(221, 221, 221, 0.6);
 }
 .content {
   padding: 15px 10px 5px;
 }
 .title {
-  font-size: 17px;
+  font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.8px;
   color: #222;
 }
 .footer {
-  margin-top: 15px;
+  margin-top: 10px;
   padding-right: 20px;
   color: #aaa;
   font-size: 14px;
@@ -52,6 +54,7 @@
   padding: 2px 6px;
 }
 .right {
+  font-size: 12px;
   display: inline-block;
   margin-left: 15px;
   line-height: 23px;
@@ -72,8 +75,6 @@
   box-sizing: border-box;
   width: 100%;
   color: #666;
-  font-size: 16px;
-  padding: 10px 15px;
-  /* border-top: 1px solid rgba(221, 221, 221, 0.6); */
-  border-bottom: 1px solid rgba(221, 221, 221, 0.6);
+  font-size: 15px;
+  padding: 5px 15px;
 }
