--- a/infomation/src/components/Header/index.css
+++ b/infomation/src/components/Header/index.css
@@ -8,6 +8,11 @@
   font-size: 20px;
 }
 .logo {
+  width: 100%;
+  display: block;
+  font-size: 0;
+}
+/* .logo {
   display: inline-block;
   width: 150px;
   height: 20px;
@@ -18,4 +23,4 @@
   width: 155px;
   height: 15px;
   margin-top: 18px;
-}
+} */
