--- a/infomation/src/components/Content/index.css
+++ b/infomation/src/components/Content/index.css
@@ -14,7 +14,7 @@
   color: #222;
 }
 .footer {
-  margin-top: 10px;
+  margin-top: 5px;
   padding-right: 20px;
   color: #aaa;
   font-size: 14px;
@@ -76,5 +76,5 @@
   width: 100%;
   color: #666;
   font-size: 15px;
-  padding: 5px 15px;
+  padding: 0 15px 5px;
 }
