--- a/infomation/src/components/Menu/index.css
+++ b/infomation/src/components/Menu/index.css
@@ -28,12 +28,25 @@
 }
 .show {
   position: absolute;
-  right: 10px;
+  right: 0;
   bottom: 10px;
-  width: calc(20% - 22px);
+  width: calc(20% - 12px);
   z-index: 999;
   height: 35px;
   line-height: 35px;
   color: #d43d3d;
   background-color: #f8f8f8;
+}
+.show span {
+  white-space: nowrap;
+}
+@media screen and (max-width:320px) {
+  .item {
+    margin-left: 17px;
+    font-size: 14px;
+  }
+  .show{
+    font-size: 14px;
+    right: 12px;
+  }
 }
