--- a/infomation/src/components/Content/index.css
+++ b/infomation/src/components/Content/index.css
@@ -71,10 +71,11 @@
 }
 .btngroup {
   display: flex;
+  align-items: flex-end;
   justify-content: space-between;
   box-sizing: border-box;
   width: 100%;
   color: #666;
-  font-size: 15px;
+  font-size: 14px;
   padding: 0 15px 5px;
 }
