--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -17,3 +17,44 @@
   padding: 0;
   background-color: #f5f5f5;
 }
+.detail {
+  height: 100%;
+  box-sizing: border-box;
+  padding: 5px 10px;
+  background-color: #fff;
+}
+.navbar {
+  margin-top: 10px;
+  color: #555;
+}
+.navbar a {
+  color: #555;
+  text-decoration: none;
+}
+.currentNews {
+  margin-top: 15px;
+  font-size: 17px;
+  line-height: 25px;
+}
+.read i, .zan i{
+  margin-right: 5px;
+}
+.btngroup {
+  display: flex;
+  align-items: flex-end;
+  box-sizing: border-box;
+  width: 100%;
+  color: #666;
+  font-size: 14px;
+  padding: 0;
+}
+.zan {
+  margin-left: 15px;
+}
+
+.otherNews {
+  margin-top: 25px;
+}
+.otherTitle {
+  color: #d43d3d;
+}
