--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -3,6 +3,7 @@ html {
   font-family: 'STHeiti', 'Microsoft YaHei', 'Helvetica', 'Arial', sans-serif;
   -webkit-text-size-adjust: none;
   word-break: break-word;
+  height: 100%;
 }
 
 body {
