--- a/infomation/src/components/Content/index.css
+++ b/infomation/src/components/Content/index.css
@@ -8,6 +8,7 @@
   padding: 15px 10px 5px;
 }
 .title a{
+  display: block;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.3px;
@@ -24,7 +25,13 @@
   box-sizing: border-box;
 }
 .left {
+  position: relative;
   display: inline-block;
+}
+.zt {
+  color: #d43d3d;
+  font-size: 12px;
+  margin-right: 5px;
 }
 .news {
   font-size: 10px;
@@ -55,6 +62,8 @@
   padding: 2px 6px;
 }
 .right {
+  position: absolute;
+  right: 15px;
   font-size: 12px;
   display: inline-block;
   margin-left: 15px;
@@ -78,5 +87,5 @@
   width: 100%;
   color: #666;
   font-size: 14px;
-  padding: 0 15px 5px;
+  padding: 3px 15px 5px;
 }
