--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -25,3 +25,9 @@ body {
   font-size: 15px;
   margin-left: 4px;
 }
+.icon-pengyouquan {
+  font-size: 17px;
+  margin-right: 4px;
+  margin-top: 2px;
+  vertical-align: middle;
+}
