增加分享功能

--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -11,6 +11,7 @@
   width: 100%;
   margin-top: -45px;
   height: 45px;
+  z-index: 99999;
 }
 .content {
   height: 100%;
@@ -172,4 +173,7 @@
   line-height: 22px;
   padding: 1px 6px;
   border-radius: 5px;
+}
+.bodyLeft a{
+  text-decoration: none;
 }
