--- a/infomation/src/components/Content/index.css
+++ b/infomation/src/components/Content/index.css
@@ -14,6 +14,11 @@
   letter-spacing: 0.3px;
   color: #222;
   text-decoration: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.title {
+  outline: 0;
 }
 .footer {
   margin-top: 5px;
@@ -62,8 +67,6 @@
   padding: 2px 6px;
 }
 .right {
-  position: absolute;
-  right: 15px;
   font-size: 12px;
   display: inline-block;
   margin-left: 15px;
@@ -87,5 +90,5 @@
   width: 100%;
   color: #666;
   font-size: 14px;
-  padding: 3px 15px 5px;
+  padding: 5px 15px 5px;
 }
