--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -17,7 +17,10 @@ body {
   box-sizing: border-box;
   background: #fff;
 }
-
+a:-webkit-any-link {
+  color: #333;
+  text-decoration: none;
+}
 .iconfont {
   font-size: 18px;
 }
@@ -25,9 +28,13 @@ body {
   font-size: 15px;
   margin-left: 4px;
 }
-.icon-pengyouquan {
+.detail-fenxiang {
   font-size: 17px;
   margin-right: 4px;
-  margin-top: 2px;
+  margin-top: -2px;
   vertical-align: middle;
+}
+.am-action-sheet-share-list {
+  height: 0;
+  padding: 5px;
 }
