--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -2,7 +2,7 @@
 <html lang="zh_CN" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>xuan123.com-每天看一点最具价值的信息！</title>
+    <title>xuanchabao123.com-每天看一点最具价值的信息！</title>
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
