--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -26,6 +26,7 @@
   color: #aaa;
   font-size: 14px;
   display: flex;
+  align-items: flex-end;
   line-height: 20px;
   box-sizing: border-box;
 }
