--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -106,16 +106,22 @@
   font-size: 12px;
   height: 22px;
   line-height: 22px;
-  padding: 1px 6px;
+  padding: 1px 6px 0;
   border-radius: 5px;
+  white-space: nowrap;
 }
 .vote {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 20px;
+  padding-top: 15px;
   padding-bottom: 15px;
 }
-.vote .defaultBtn {
-  padding: 5px 10px;
+.download {
+  display: flex;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+.download .title {
+  width: 100%;
 }
