--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -10,7 +10,7 @@
 .title, .title a{
   display: block;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 21px;
   letter-spacing: 0.3px;
   color: #222;
   text-decoration: none;
@@ -21,7 +21,7 @@
   outline: 0;
 }
 .footer {
-  margin-top: 5px;
+  margin-top: -2px;
   padding-right: 20px;
   color: #aaa;
   font-size: 14px;
@@ -99,14 +99,13 @@
 .defaultBtn {
   display: flex;
   align-items: center;
-  display: flex;
-  align-items: center;
   background-color: #d43d3d;
   color: #fff !important;
   font-size: 12px;
+  font-weight: 700;
   height: 22px;
   line-height: 22px;
-  padding: 1px 6px 0;
+  padding: 1px 8px;
   border-radius: 5px;
   white-space: nowrap;
 }
@@ -114,7 +113,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 15px;
+  padding-top: 5px;
   padding-bottom: 15px;
 }
 .download {
