--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -1,6 +1,6 @@
 html {
   background: #fff;
-  font-family: 'STHeiti', 'Microsoft YaHei', 'Helvetica', 'Arial', sans-serif;
+  font-family: PingFangSC-Regular,Microsoft YaHei,Helvetica;
   -webkit-text-size-adjust: none;
   word-break: break-word;
   height: 100%;
