--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -26,51 +26,65 @@
   color: #aaa;
   font-size: 14px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   line-height: 20px;
   box-sizing: border-box;
 }
 .desc {
+  margin-top: 5px;
+  font-size: 13px;
   line-height: 1.8;
+  letter-spacing: 0.5px;
 }
 .left {
   position: relative;
   display: inline-block;
+  font-size: 11.5px;
 }
 .zt {
   color: #d43d3d;
-  font-size: 12px;
+  font-size: 11.5px;
   margin-right: 5px;
+  font-weight: 500;
+}
+.vote_zt {
+  display: inline-block;
+  color: #d43d3d;
+  font-size: 11.5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  font-weight: 500;
 }
 .news {
   font-size: 10px;
   color: #b145b8;
   border: 1px solid #b145b8;
   border-radius: 10px;
-  padding: 2px 6px;
+  padding: 2px 6px 1px;
 }
 .jiagou {
   font-size: 10px;
   color: #29bbc0;
   border: 1px solid #29bbc0;
   border-radius: 10px;
-  padding: 1px 5px;
+  padding: 2px 6px 1px;
 }
 .ai {
   font-size: 10px;
   color: #ee5757;
   border: 1px solid #ee5757;
   border-radius: 10px;
-  padding: 2px 6px;
+  padding: 2px 6px 1px;
 }
 .qukuailian {
   font-size: 10px;
   color: #43ad32;
   border: 1px solid #43ad32;
   border-radius: 10px;
-  padding: 2px 6px;
+  padding: 2px 6px 1px;
 }
 .right {
+  padding: relative;
   font-size: 12px;
   display: inline-block;
   margin-left: 15px;
