--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -8,6 +8,14 @@
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_1lwgmfanqgp.css" />
     <script src="/static/conf.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      ;(function () {
+        var src = '/static/eruda.min.js';
+        if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
+        document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+        document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
+      })();
+    </script>
   </head>
   <body>
   <div id="root"></div>
