--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -194,7 +194,12 @@
   letter-spacing: 0.6px;
 }
 .voteDetail {
+  padding-top: 0;
   text-indent: 25px;
+  font-size: 13px;
+  line-height: 1.8;
+  letter-spacing: 0.5px;
+  color: #aaa;
 }
 .stepTitle {
   color: #2B7FD8;
@@ -222,8 +227,16 @@
   font-size: 16px;
 }
 .voteItem {
-  padding: 20px 0;
+  padding: 20px 0 10px;
+  font-size: 16px;
+  line-height: 21px;
+  letter-spacing: 0.3px;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid rgba(221, 221, 221, 0.6);
+}
+
+.voteItem .zan {
+  color: #666;
+  font-size: 14px;
 }
