--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -193,6 +193,11 @@
   line-height: 25px;
   letter-spacing: 0.6px;
 }
+.voteTitle {
+  text-indent: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 .voteDetail {
   padding-top: 0;
   text-indent: 25px;
@@ -223,20 +228,25 @@
   padding-right: 90px;
 }
 .voteList {
-  padding: 10px 20px;
+  padding: 10px 0;
   font-size: 16px;
 }
 .voteItem {
-  padding: 20px 0 10px;
-  font-size: 16px;
+  padding: 25px 20px 5px;
+  font-size: 15px;
   line-height: 21px;
   letter-spacing: 0.3px;
   display: flex;
-  justify-content: space-between;
   border-bottom: 1px solid rgba(221, 221, 221, 0.6);
 }
 
+.voteItem .title {
+  width: 100%;
+}
 .voteItem .zan {
   color: #666;
   font-size: 14px;
+  width: 100px;
+  margin-left: 0;
+  text-align: right;
 }
