--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -26,10 +26,10 @@
 .navbar {
   color: #555;
   padding: 20px 10px 15px;
-  font-size: 16px;
+  font-size: 15px;
 }
 .navbar a {
-  font-size: 16px;
+  font-size: 15px;
   color: #555;
   text-decoration: none;
 }
@@ -239,14 +239,39 @@
   display: flex;
   border-bottom: 1px solid rgba(221, 221, 221, 0.6);
 }
-
+.voteItem:first-child {
+  padding-top: 5px;
+}
+.voteItem .index {
+  margin-right: 10px;
+}
 .voteItem .title {
   width: 100%;
 }
 .voteItem .zan {
   color: #666;
   font-size: 14px;
-  width: 100px;
   margin-left: 0;
   text-align: right;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  white-space: nowrap;
+  margin-left: 10px;
+  margin-top: -2px;
+}
+.voteItem .voteZan {
+  padding-top: 2px;
+}
+.fixedMenu {
+  display: none;
+  position: fixed;
+  right: 20px;
+  bottom: 50px;
+}
+.top {
+  border-radius: 50%;
+  padding: 5px 5px;
+  background-color: rgba(255, 255, 255, 1);
+  margin-bottom: 10px;
 }
