--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -268,10 +268,12 @@
   position: fixed;
   right: 20px;
   bottom: 50px;
+  z-index: 999;
 }
 .top {
-  border-radius: 50%;
   padding: 5px 5px;
   background-color: rgba(255, 255, 255, 1);
   margin-bottom: 10px;
+  border: 1px solid rgba(212, 61, 61, 0.4);
+  background-color: #fff;
 }
