--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -46,5 +46,12 @@ a:-webkit-any-link {
 }
 .icon-top, .icon-shoucang1, .icon-shoucang2{
   font-size: 20px;
+  color: #fff;
+}
+
+html:not([data-scale]) .am-action-sheet-share-list::before {
+  height: 0;
+}
+.am-action-sheet-share-cancel-button {
   color: #d43d3d;
 }
