--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -274,15 +274,15 @@
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 1);
   margin-bottom: 10px;
-  border: 1px solid rgba(212, 61, 61, 0.4);
-  background-color: #fff;
+  background-color: rgba(0,0,0,.5);
+  text-align: center;
 }
 .top:first-child {
   display: none;
 }
 .collection {
-  color: #d43d3d;
+  color: #fff;
   font-size: 9px;
-  padding: 0;
+  padding: 2px 1px 0 0;
   margin: 0 auto;
 }
