--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -55,31 +55,8 @@
   margin-top: 5px;
   font-weight: 500;
 }
-.news {
+.type {
   font-size: 10px;
-  color: #b145b8;
-  border: 1px solid #b145b8;
-  border-radius: 10px;
-  padding: 2px 6px 1px;
-}
-.jiagou {
-  font-size: 10px;
-  color: #29bbc0;
-  border: 1px solid #29bbc0;
-  border-radius: 10px;
-  padding: 2px 6px 1px;
-}
-.ai {
-  font-size: 10px;
-  color: #ee5757;
-  border: 1px solid #ee5757;
-  border-radius: 10px;
-  padding: 2px 6px 1px;
-}
-.qukuailian {
-  font-size: 10px;
-  color: #43ad32;
-  border: 1px solid #43ad32;
   border-radius: 10px;
   padding: 2px 6px 1px;
 }
