--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -56,3 +56,18 @@ html:not([data-scale]) .am-action-sheet-share-list::before {
   color: #d43d3d;
   font-weight: 700;
 }
+.share_wechat {
+  z-index: 99999999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.share_wechat img {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 50%;
+}
