增加友盟统计

--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -2,7 +2,7 @@
 <html lang="zh_CN" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>xuanchabao123.com-每天看一点最具价值的信息！</title>
+    <title>chabao123.com-每天只推荐优选的高品质信息！</title>
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
@@ -20,5 +20,6 @@
   </head>
   <body>
   <div id="root"></div>
+  <div style="display:none"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274864533'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274864533%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
   </body>
 </html>
