增加了点赞动画以及下拉刷新

--- a/infomation/src/components/list-item.css
+++ b/infomation/src/components/list-item.css
@@ -77,6 +77,9 @@
 .read i, .zan i, .share i{
   margin-right: 5px;
 }
+.zan {
+  position: relative;
+}
 .btngroup {
   display: flex;
   align-items: flex-end;
