--- a/infomation/src/components/PCFooter/index.css
+++ b/infomation/src/components/PCFooter/index.css
@@ -3,9 +3,9 @@
   min-width: 1092px;
   height: 34px;
   line-height: 34px;
-  background-color: #f4f5f6;
+  background-color: #fff;
   font-size: 14px;
-  color: #777;
+  color: #333;
 }
 .center {
   width: 1092px;
