--- a/infomation/src/components/PCHeader/index.css
+++ b/infomation/src/components/PCHeader/index.css
@@ -5,7 +5,9 @@
   line-height: 34px;
   background: #222;
   font-size: 14px;
-  color: #fff;
+  background: #fff;
+  color: #333;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
 }
 .center {
   width: 1092px;
