--- a/infomation/src/components/PCMenu/index.less
+++ b/infomation/src/components/PCMenu/index.less
@@ -1,7 +1,11 @@
 .menu {
   width: 110px;
-  margin-right: 30px;
-  background-color: #fff;
+  margin-right: 10px;
+}
+ul, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .list {
   box-sizing: border-box;
@@ -17,6 +21,10 @@
   border-radius: 4px;
   margin-bottom: 2px;
   transition-property: color,background-color;
+  &:hover {
+    background-color: #ed4040;
+    color: #fff !important;
+  }
 }
 .active {
   .item;
