--- a/infomation/src/pages/pc/index.css
+++ b/infomation/src/pages/pc/index.css
@@ -1,15 +1,15 @@
 .content{
   width: 100%;
-  height: 100%;
+  background: #f5f6f7;
 }
 .body {
-  width: 1092px;
-  margin: 0 auto;
+  width: 960px;
+  margin: 10px auto 0;
   min-height: 100%;
   display: flex;
 }
 .menu {
-  width: 200px;
+  width: 150px;
 }
 .news {
   width: 100%;
