--- a/infomation/src/components/Menu/index.css
+++ b/infomation/src/components/Menu/index.css
@@ -2,7 +2,7 @@
   position: relative;
   background-color: #f8f8f8;
   width: 100%;
-  padding: 10px;
+  padding: 0 10px 10px;
   box-sizing: border-box;
   overflow: hidden;
 }
