--- a/infomation/src/components/PCFooter/index.css
+++ b/infomation/src/components/PCFooter/index.css
@@ -5,7 +5,7 @@
   line-height: 34px;
   background-color: #fff;
   font-size: 14px;
-  color: #333;
+  color: #777;
 }
 .center {
   width: 1092px;
@@ -13,10 +13,15 @@
   text-align: center;
 }
 .center span {
-  margin-left: 20px;
+  margin: 0 20px;
+}
+.center a {
+  color: #777 !important;
+  margin: 0 20px; 
 }
 .center img {
   vertical-align: middle;
+  width: 15px;
   margin-right: 1px;
-  margin-bottom: 3px;
+  margin-bottom: 1px;
 }
