--- a/infomation/src/pages/mobile/index.css
+++ b/infomation/src/pages/mobile/index.css
@@ -2,19 +2,18 @@
   height: 100%;
   box-sizing: border-box;
   flex: column;
+  flex-direction: column;
   align-items: stretch;
-  padding-top: 40px;
   background-color: #f5f5f5;
 }
 .header {
-  position: fixed;
   width: 100%;
-  margin-top: -45px;
   height: 45px;
   z-index: 99999;
 }
 .content {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   padding: 0;
   background-color: #f5f5f5;
