--- a/infomation/src/components/Header/index.css
+++ b/infomation/src/components/Header/index.css
@@ -1,14 +1,19 @@
 .header {
   background-color: #d43d3d;
+  position: fixed;
+  top: 0;
+  width: 100%;
   height: 45px;
   text-align: center;
   font-family: "icrosoft YaHei";
   color: #fff;
-  line-height: 45px;
+  line-height: 50px;
   font-size: 20px;
+  z-index: 9999;
 }
 .logo {
   width: 100%;
+  height: 50px;
   display: block;
   font-size: 0;
 }
