--- a/infomation/src/components/PCContent/index.less
+++ b/infomation/src/components/PCContent/index.less
@@ -32,11 +32,14 @@
       margin-right: 15px;
     }
     .type {
+      display: inline-block;
       color: #fff;
       font-size: 12px;
       margin-right: 10px;
-      padding: 1px 2px;
       line-height: 1;
+      height: 20px;
+      line-height: 20px;
+      padding: 0 10px;
     }
   }
 }
