--- a/infomation/src/components/PCFooter/index.css
+++ b/infomation/src/components/PCFooter/index.css
@@ -6,6 +6,7 @@
   background-color: #fff;
   font-size: 14px;
   color: #777;
+  font-family: PingFang SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,Helvetica Neue,Arial,sans-serif;
 }
 .center {
   width: 1092px;
@@ -17,7 +18,7 @@
 }
 .center a {
   color: #777 !important;
-  margin: 0 20px; 
+  margin: 0 20px;
 }
 .center img {
   vertical-align: middle;
