--- a/infomation/src/components/PCHeader/index.css
+++ b/infomation/src/components/PCHeader/index.css
@@ -1,10 +1,10 @@
 .header {
   width: 100%;
   min-width: 1092px;
-  height: 34px;
-  line-height: 34px;
+  height: 55px;
+  line-height: 55px;
   background: #222;
-  font-size: 14px;
+  font-size: 17px;
   background: #fff;
   color: #333;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
@@ -13,11 +13,20 @@
   width: 1092px;
   margin: 0 auto;
   padding-left: 110px;
+  display: flex;
+  align-items: center;
 }
 .logo {
   display: inline-block;
 }
+.logo img {
+  vertical-align: middle;
+  height: 40px;
+  display: block;
+  font-size: 0;
+  margin-bottom: 8px;
+}
 .title {
   display: inline-block;
-  margin-left: 50px;
+  margin-left: 10px;
 }
