增加尾部、多次点击

--- a/infomation/src/components/Footer/index.css
+++ b/infomation/src/components/Footer/index.css
@@ -2,8 +2,11 @@
   background-color: #f2f2f2;
   text-align: center;
   line-height: 24px;
-  padding: 10px 0;
+  padding: 10px 0 10px;
   font-size: 12px;
+}
+.title, .desc, .copyright {
+  margin: 10px auto;
 }
 .title {
   text-align: center;
