--- a/infomation/src/components/Header/index.css
+++ b/infomation/src/components/Header/index.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 45px;
   text-align: center;
-  font-family: "icrosoft YaHei";
+  font-family: "Microsoft YaHei";
   color: #fff;
   line-height: 50px;
   font-size: 20px;
