--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -1,6 +1,6 @@
 html {
   background: #fff;
-  font-family: PingFangSC-Regular,Microsoft YaHei,Helvetica;
+  font-family: PingFang SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,Helvetica Neue,Arial,sans-serif;
   -webkit-text-size-adjust: none;
   word-break: break-word;
 }
