--- a/infomation/src/components/PCContent/index.less
+++ b/infomation/src/components/PCContent/index.less
@@ -4,22 +4,29 @@
   border-bottom: 1px solid #f4f4f4;
   position: relative;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.04);
+  &:hover{
+    background: rgba(255,255,255,.6);
+  }
 }
 .content {
   .title {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: bold;
     line-height: 24px;
     height: 24px;
     margin-bottom: 4px;
     display: inline-block;
+    letter-spacing: 0.6px;
+    & a {
+      color: #555 !important;
+    }
     & a:hover {
       color: #d43d3d;
     }
   }
   .footer {
     margin-top: 5px;
-    font-size: 13px;
+    font-size: 12px;
     color: #8a8a8a;
     line-height: 24px;
     .zt {
