修改手机端和PC端的样式

--- a/infomation/src/components/PCContent/index.less
+++ b/infomation/src/components/PCContent/index.less
@@ -4,13 +4,10 @@
   border-bottom: 1px solid #f4f4f4;
   position: relative;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.04);
-  &:hover{
-    background: rgba(255,255,255,.6);
-  }
 }
 .content {
   .title {
-    font-size: 17px;
+    font-size: 16px;
     font-weight: bold;
     line-height: 24px;
     height: 24px;
@@ -18,10 +15,10 @@
     display: inline-block;
     letter-spacing: 0.6px;
     & a {
-      color: #555 !important;
+      color: #2e3135 !important;
     }
     & a:hover {
-      color: #d43d3d;
+      color: #d43d3d !important;
     }
   }
   .footer {
