--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -69,3 +69,21 @@ html:not([data-scale]) .am-action-sheet-share-list::before {
   right: 5px;
   width: 50%;
 }
+.close {
+  position: absolute;
+  font-size: 14px;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  width: 80px;
+  height: 35px;
+  line-height: 37px;
+  top: 45%;
+  left: 50%;
+  margin-left: -40px;
+  color: #fff;
+  text-align: center;
+  font-weight: 700;
+}
+.icon-dianzan1, .icon-fenxiang2 {
+  font-size: 13px;
+}
