--- a/infomation/src/components/PCDownload/index.less
+++ b/infomation/src/components/PCDownload/index.less
@@ -3,17 +3,16 @@
   background: #fff;
   border-bottom: 1px solid #f4f4f4;
   position: relative;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.04);
 }
 .content {
   .download {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     .title {
       font-size: 18px;
       font-weight: bold;
       line-height: 24px;
-      height: 24px;
       margin-bottom: 4px;
       display: inline-block;
       & a:hover {
@@ -25,11 +24,11 @@
       align-items: center;
       background-color: #d43d3d;
       color: #fff !important;
-      font-size: 15px;
+      font-size: 13px;
       font-weight: 700;
       height: 28px;
       line-height: 28px;
-      padding: 2px 12px;
+      padding: 1px 10px;
       border-radius: 5px;
       white-space: nowrap;
     }
