--- a/infomation/src/components/PCHeader/index.css
+++ b/infomation/src/components/PCHeader/index.css
@@ -3,33 +3,29 @@
   min-width: 1092px;
   height: 55px;
   line-height: 55px;
-  background: #222;
-  font-size: 17px;
   background: #fff;
-  color: #333;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+  border: 1px solid rgba(221, 221, 221, 0.6);
 }
 .center {
-  width: 1092px;
+  width: 960px;
+  height: 55px;
   margin: 0 auto;
-  padding-left: 110px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
-.logo {
+.logo, .title {
   display: inline-block;
 }
 .logo img {
   vertical-align: middle;
-  height: 37px;
+  height: 34px;
   display: block;
   font-size: 0;
-  margin-bottom: 10px;
 }
-.title {
-  display: inline-block;
-  margin-left: 10px;
-  font-size: 14px;
-  font-family: "microsoft yahei",Arial;
-  letter-spacing: 0.5px;
+.title img{
+  vertical-align: middle;
+  height: 17px;
+  display: block;
+  font-size: 0;
 }
