--- a/infomation/src/components/PCReadingPraiseShare/index.less
+++ b/infomation/src/components/PCReadingPraiseShare/index.less
@@ -1,12 +1,19 @@
 .btngroup {
   margin-top: 5px;
   font-size: 12px;
+  display: flex;
+  align-items: center;
+  .read, .zan, .share {
+    display: flex;
+    align-items: center;
+  }
   .read {
     cursor: pointer;
     margin-right: 15px;
   }
   .num {
     color: #3399ea;
+    padding: 3px;
   }
   .text {
     color: #8a8a8a;
