修改PC版样式

--- a/infomation/src/components/PCContent/index.less
+++ b/infomation/src/components/PCContent/index.less
@@ -3,7 +3,6 @@
   background: #fff;
   border-bottom: 1px solid #f4f4f4;
   position: relative;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.04);
 }
 .content {
   .title {
@@ -27,18 +26,20 @@
     color: #8a8a8a;
     line-height: 24px;
     .zt {
-      color: #d43d3d;
+      // color: #d43d3d;
+      color: #999;
       font-weight: 700;
       margin-right: 15px;
     }
     .source {
-      color: #3d3d3d;
+      color: #999;
       margin-right: 15px;
     }
     .type {
       display: inline-block;
-      color: #fff;
+      // color: #fff;
       font-size: 12px;
+      font-weight: 700;
       margin-right: 10px;
       line-height: 1;
       height: 20px;
