--- a/infomation/src/components/PCFixedMenu/index.less
+++ b/infomation/src/components/PCFixedMenu/index.less
@@ -1,22 +1,23 @@
 .fixedMenu {
   position: fixed;
   left: 50%;
-  bottom: 50px;
+  bottom: 30%;
   z-index: 999;
-  margin-left: 480px;
+  margin-left: 500px;
 }
 .top {
   padding: 7px 0;
   box-sizing: border-box;
   width: 40px;
   height:45px;
-  background-color: rgba(248,89,89,.8);
+  // background-color: rgba(248,89,89,.8);
+  background-color: #ed4040;
   margin-bottom: 2px;
   text-align: center;
   cursor: pointer;
-  &:hover {
-    background: #f85959;
-  }
+  // &:hover {
+  //   background: #f85959;
+  // }
 }
 .collection {
   color: #fff;
