--- a/infomation/src/components/PCReadingPraiseShare/index.less
+++ b/infomation/src/components/PCReadingPraiseShare/index.less
@@ -12,7 +12,8 @@
     margin-right: 15px;
   }
   .num {
-    color: #3399ea;
+    // color: #3399ea;
+    color: #999;
     padding: 3px;
   }
   .text {
@@ -28,6 +29,7 @@
     margin-right: 15px;
     & i {
       margin-right: 3px;
+      color: #999;
     }
     &:hover {
       color: #3399ea;
