--- a/infomation/src/components/PCFooter/index.css
+++ b/infomation/src/components/PCFooter/index.css
@@ -4,8 +4,8 @@
   height: 34px;
   line-height: 34px;
   background-color: #fff;
-  font-size: 14px;
-  color: #777;
+  font-size: 13px;
+  color: #ccc;
 }
 .center {
   width: 1092px;
@@ -16,12 +16,12 @@
   margin: 0 20px;
 }
 .center a {
-  color: #777 !important;
+  color: #ccc !important;
   margin: 0 20px;
 }
 .center img {
   vertical-align: middle;
-  width: 15px;
+  width: 13px;
   margin-right: 1px;
   margin-bottom: 1px;
 }
