--- a/infomation/src/components/PCMenu/index.less
+++ b/infomation/src/components/PCMenu/index.less
@@ -1,6 +1,9 @@
 .menu {
-  width: 100px;
-  margin: 0 auto;
+  position: fixed;
+  top: 85px;
+  left: 50%;
+  width: 250px;
+  margin-left: -430px;
 }
 ul, li {
   list-style: none;
