--- a/infomation/src/pages/pc/index.css
+++ b/infomation/src/pages/pc/index.css
@@ -2,6 +2,10 @@
   width: 100%;
   /* background: #f5f6f7; */
 }
+.header {
+  width: 100%;
+  height: 55px;
+}
 .body {
   width: 960px;
   margin: 10px auto 0;
