--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -6,7 +6,9 @@
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_bobnxn63ec9.css" />
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_imfe032m8kf.css" />
     <!-- <link rel="stylesheet" href="/static/iconfont/iconfont.css" /> -->
     <script src="/static/conf.js" charset="utf-8"></script>
     <script type="text/javascript">
