--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -8,16 +8,16 @@
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_imfe032m8kf.css" />
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_c7mu6rfp2qc.css" />
     <!-- <link rel="stylesheet" href="/static/iconfont/iconfont.css" /> -->
     <script src="/static/conf.js" charset="utf-8"></script>
     <script type="text/javascript">
-      // ;(function () {
-      //   var src = '/static/eruda.min.js';
-      //   if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
-      //   document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
-      //   document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
-      // })();
+      ;(function () {
+        var src = '/static/eruda.min.js';
+        if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
+        document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+        document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
+      })();
       ;(function () {
         var sUserAgent = window.navigator.userAgent;
         if (sUserAgent.indexOf('Android') > -1 || sUserAgent.indexOf('iPhone') > -1 || sUserAgent.indexOf('iPad') > -1 || sUserAgent.indexOf('iPod') > -1 || sUserAgent.indexOf('Symbian') > -1) {
@@ -33,6 +33,7 @@
     </script>
   </head>
   <body>
+  <!-- <div style="display:none;"><img src="/static/share_logo.png" alt=""></div> -->
   <div id="root"></div>
   <div style="display:none"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274864533'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274864533%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
   </body>
