--- a/infomation/src/components/PCReadingPraiseShare/index.less
+++ b/infomation/src/components/PCReadingPraiseShare/index.less
@@ -1,4 +1,5 @@
 .btngroup {
+  position: relative;
   margin-top: 5px;
   font-size: 12px;
   display: flex;
@@ -58,6 +59,24 @@
     }
     & i {
       margin-right: 3px;
+    }
+  }
+  .qrcode {
+    position: absolute;
+    top: 30px;
+    left: 70px;
+    padding-top: 10px;
+    z-index: 999;
+    width: 150px;
+    font-size: 14px;
+    color: #8f969c;
+    background-color: #fff;
+    box-shadow: 0 1px 2px 0 #e0e4e9;
+    border: 1px solid rgba(217,222,224,.99);
+    text-align: center;
+    img {
+      width: 150px;
+      height: 150px;
     }
   }
 }
