--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -92,3 +92,9 @@ html:not([data-scale]) .am-action-sheet-share-list::before {
 .icon-iconfontxiangshang {
   color: #fff;
 }
+.icon-guanbi {
+  cursor: pointer;
+  position: absolute;
+  top: 3px;
+  right: 2px;
+}
