--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -33,7 +33,7 @@
     </script>
   </head>
   <body>
-  <!-- <div style="display:none;"><img src="/static/share_logo.png" alt=""></div> -->
+  <div style="display:none;"><img src="http://www.chabao123.com/static/share_logo.png" alt=""></div>
   <div id="root"></div>
   <div style="display:none"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274864533'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274864533%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
   </body>
