--- a/infomation/src/components/PCContent/index.less
+++ b/infomation/src/components/PCContent/index.less
@@ -16,7 +16,7 @@
       color: #2e3135 !important;
     }
     & a:hover {
-      color: #ed4040 !important;
+      color: #406599 !important;
     }
   }
   .footer {
