--- a/infomation/src/components/PCDownload/index.less
+++ b/infomation/src/components/PCDownload/index.less
@@ -22,7 +22,7 @@
     .defaultBtn {
       display: flex;
       align-items: center;
-      background-color: #d43d3d;
+      background-color: #ed4040;
       color: #fff !important;
       font-size: 13px;
       font-weight: 700;
