--- a/infomation/src/components/PCShare/index.less
+++ b/infomation/src/components/PCShare/index.less
@@ -3,12 +3,12 @@
   .share {
     display: flex;
     align-items: center;
-    background-color: #d43d3d;
+    background-color: #ed4040;
     color: #fff;
-    font-size: 12px;
-    height: 22px;
-    line-height: 22px;
-    padding: 1px 10px 2px;
+    font-size: 13px;
+    height: 30px;
+    line-height: 30px;
+    padding: 1px 20px 2px;
     border-radius: 5px;
     cursor: pointer;
   }
