--- a/infomation/src/components/PCHeader/index.css
+++ b/infomation/src/components/PCHeader/index.css
@@ -15,7 +15,6 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 .logo, .title {
   display: inline-block;
@@ -32,4 +31,5 @@
   height: 30px;
   display: block;
   font-size: 0;
+  margin-left: 30px;
 }
