--- a/infomation/src/components/PCNavBar/index.less
+++ b/infomation/src/components/PCNavBar/index.less
@@ -1,18 +1,32 @@
-.body {
-  width: 960px;
-  margin: 0 auto;
-  color: #555;
-  padding: 20px 10px 5px;
-  font-size: 15px;
-}
-.body a {
-  font-size: 15px;
-  color: #555;
-  text-decoration: none;
-}
-.body .iconfont {
-  color: #555;
-}
-.arrow {
-  padding: 0 10px;
+.content {
+  width: 100%;
+  border: 1px solid rgba(221, 221, 221, 0.6);
+  .body {
+    width: 1150px;
+    margin: 0 auto;
+    color: #555;
+    padding: 10px 10px 10px 20px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+  }
+  .body a {
+    display: inline-block;
+    font-size: 16px;
+    color: #555;
+    text-decoration: none;
+  }
+  .body .iconfont {
+    color: #555;
+  }
+  .arrow {
+    font-size: 16px;
+    padding: 0 10px;
+  }
+  .navLogo {
+    display: inline-block;
+    font-size: 0;
+    height: 20px;
+    margin-right: 20px;
+  }
 }
