--- a/infomation/src/pages/pc/index.less
+++ b/infomation/src/pages/pc/index.less
@@ -13,15 +13,15 @@
   display: flex;
 }
 .menu {
-  width: 250px;
+  width: 200px;
   margin-top: 20px;
 }
 .news {
-  width: 100%;
+  width: 760px;
   padding: 0 30px;
 }
 .detail{
-  width: 960px;
+  width: 660px;
   margin: 10px auto 0;
   min-height: 100%;
   padding: 0 50px;
@@ -32,19 +32,20 @@
     line-height: 25px;
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
     color: #d43d3d;
     font-size: 16px;
     padding: 20px 10px 0;
     font-weight: 700;
     .title, .share {
       display: inline-block;
+      margin-right: 30px;
     }
   }
   .item, .other {
-    padding: 20px 10px 0;
+    padding: 20px 10px 10px;
+    border-bottom: 1px solid #f4f4f4;
     .title {
-      font-size: 17px;
+      font-size: 18px;
       font-weight: bold;
       line-height: 24px;
       display: inline-block;
@@ -53,7 +54,7 @@
         color: #2e3135 !important;
       }
       & a:hover {
-        color: #ed4040 !important;
+        color: #406599 !important;
       }
     }
     .footer {
@@ -92,8 +93,7 @@
   }
   .other {
     .title {
-      font-size: 15px;
-      font-weight: normal;
+      font-size: 16px;
     }
   }
   .download {
