--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -103,7 +103,7 @@ html:not([data-scale]) .am-action-sheet-share-list::before {
   top: 3px;
   right: 2px;
 }
-.icon-pc-shouye {
-  margin-top: 8px;
+.icon-shouye1 {
+  margin-top: 6px;
   margin-right: 5px;
 }
