--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -8,9 +8,9 @@
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_c7mu6rfp2qc.css" />
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_mqmjr3vaqtk.css" />
     <!-- <link rel="stylesheet" href="/static/iconfont/iconfont.css" /> -->
-    <script src="/static/conf.js" charset="utf-8"></script>
+    <script src="/static/conf.js?v=<%=new Date().getTime()%>" charset="utf-8"></script>
     <script type="text/javascript">
       ;(function () {
         var src = '/static/eruda.min.js';
