--- a/infomation/src/pages/document.ejs
+++ b/infomation/src/pages/document.ejs
@@ -11,14 +11,22 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_mqmjr3vaqtk.css" />
     <!-- <link rel="stylesheet" href="/static/iconfont/iconfont.css" /> -->
     <script src="/static/conf.js?v=<%=new Date().getTime()%>" charset="utf-8"></script>
+    <!--[if gte IE 9]>
+    <script src="/static/polyfill.min.js" charset="utf-8"></script>
+    <![endif]-->
     <script type="text/javascript">
       ;(function () {
-        var src = '/static/eruda.min.js';
-        if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
-        document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
-        document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
-      })();
-      ;(function () {
+        // var src = '/static/eruda.min.js';
+        // if (!/eruda=true/.test(window.location) && localStorage.getItem('active-eruda') != 'true') return;
+        // document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+        // document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
+        // IE支持
+        if (!!window.ActiveXObject || "ActiveXObject" in window) {
+          var src = '/static/polyfill.min.js';
+          document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+          document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>');
+        }
+        // 自动跳转
         var sUserAgent = window.navigator.userAgent;
         if (sUserAgent.indexOf('Android') > -1 || sUserAgent.indexOf('iPhone') > -1 || sUserAgent.indexOf('iPad') > -1 || sUserAgent.indexOf('iPod') > -1 || sUserAgent.indexOf('Symbian') > -1) {
           if (location.href.indexOf('/pc/') >= 0) {
@@ -33,7 +41,6 @@
     </script>
   </head>
   <body>
-  <div style="display:none;"><img src="http://www.chabao123.com/static/share_logo_v1.png" alt=""></div>
   <div id="root"></div>
   <div style="display:none"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274864533'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274864533%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
   </body>
