修改分享的文案

--- a/infomation/src/components/PCFixedMenu/index.less
+++ b/infomation/src/components/PCFixedMenu/index.less
@@ -39,10 +39,15 @@
 .qrcode {
   display: none;
   position: absolute;
-  top: -50px;
-  left: -150px;;
+  top: -150px;
+  left: -360px;;
+  border: 1px solid rgba(221, 221, 221, 0.6);
+  padding-top: 15px;
+  color: #8f969c;
+  z-index: 999;
+  background-color: #fff;
 }
 .qrcode img {
-  width: 150px;
-  height: 150px;
+  width: 350px;
+  height: 350px;
 }
